--- a/styles.css
+++ b/styles.css
@@ -14,5 +14,5 @@ body{
     animation-duration: 10s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    animation-timing-function: linear;
+    animation-timing-function: ease;
 }
