--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,23 @@ body{
     animation-direction: alternate;
     animation-timing-function: ease;
 }
+
+.test{
+    box-sizing: border-box;
+    width: 100px;
+    height: 100px;
+
+    padding: 20px;
+
+    transition: padding 2s;
+}
+.test:hover{
+    padding: 0px;
+}
+
+.button{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background: red;
+}
