--- a/rightContentStyle.css
+++ b/rightContentStyle.css
@@ -1,10 +1,10 @@
-.content{
+.rightContent{
     box-sizing: border-box;
 
     background: rgb(255, 255, 255);
 
     padding: 20px;
-    width: 60%;
+    width: 50%;
 
     border-radius: 10px;
     box-shadow: 0px 0px 7px 0px rgb(0, 0, 0);
@@ -12,20 +12,18 @@
     margin: 0px 0px 20px 0px;
 }
 
-.textTitle{
-    font-size: 35px;
-    font-weight: bold;
-    margin: 0px 0px 10px 0px;
-}
-
-.text{
+.imagesContent{
     display: flex;
     flex-direction: column;
-    font-size: var(--normalFontSize);
-    font-weight: bold;
 }
 
-.stuffs{
+.imagesTextTitle{
+    font-size: 35px;
+    font-weight: bold;
+    margin: 0px 0px 20px 0px;
+}
+
+.imagesBox{
     width: 100%;
     height: fit-content;
 
@@ -37,19 +35,23 @@
     flex-wrap: wrap;
 }
 
-.stuff{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.imageBox{
     width: 30%;
     height: fit-content;
+    margin: 0px 0px 20px 0px;
 
-    margin: 10px 0px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    font-size: var(--normalFontSize);
+    font-weight: bold;
 }
 
-.stuffImg{
+.imageBoxImage{
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    margin: 0px 0px 5px 0px;
 }
