--- a/leftContentStyle.css
+++ b/leftContentStyle.css
@@ -16,15 +16,83 @@
     flex-direction: column;
 }
 
+.resumeImage{
+    width: 100%;
+    height: auto;
+    margin: 0px 0px 5px 0px;
+
+    border-radius: 10px;
+}
+
+.resumeBasics{
+    box-sizing: border-box;
+
+    width: 100%;
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.resumeBasicInfo{
+    box-sizing: border-box;
+
+    height: fit-content;
+    width: 100%;
+    margin: 0px 0px 5px 0px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-end;
+
+    font-size: 15px;
+}
+
+.resumeBasicInfoIcon{
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 25px;
+    margin: 0px 5px 0px 0px;
+}
+
 .resumeTextTitle{
     font-size: 35px;
-    font-weight: bold;
+    font-weight: 550;
     margin: 0px 0px 10px 0px;
 }
 
 .resumeText{
     display: flex;
     flex-direction: column;
-    font-size: var(--normalFontSize);
-    font-weight: bold;
+    font-size: 15px;
 }
+
+@media (max-width: 750px){
+    .leftContent{
+        width: 100%;
+        margin: 0px 0px 20px 0px;
+    }
+
+    .resumeImage{
+        width: 100%;
+    }
+
+    .resumeBasicInfo{
+        font-size: 25px;
+    }
+
+    .resumeBasicInfoIcon{
+        font-size: 30px;
+    }
+
+    .resumeText{
+        font-size: 25px;
+    }
+}
+
