--- a/topStyle.css
+++ b/topStyle.css
@@ -16,5 +16,16 @@
 .pageTitle{
     font-size: var(--bigFontSize);
     color: rgb(255, 255, 255);
-    font-weight: 900;
+}
+
+@media (max-width: 750px){
+    .top{
+        flex-direction: column;
+        align-items: center;
+        padding: none;
+        margin: none;
+    }
+    .pageTitle{
+        font-size: 30px;
+    }
 }
