--- a/leftContent/leftContentStyle.css
+++ b/leftContent/leftContentStyle.css
@@ -1,26 +1,36 @@
 .leftContent{
     box-sizing: border-box;
-
-    background: rgb(255, 255, 255);
-
-    padding: 20px;
-    margin: 0px 20px 0px 0px;
     width: 20%;
-
-    border-radius: 10px;
-    box-shadow: 0px 0px 7px 0px rgb(0, 0, 0);
+    margin: 0px 20px 0px 0px;
 }
 
 .resumeContent{
+    box-sizing: border-box;
+    
+    background: rgb(255, 255, 255);
+
+    padding: 20px;
+    width: 100%;
+    height: auto;
+
+    border-radius: 10px;
+    box-shadow: 0px 0px 7px 0px rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
+}
+
+.resumeContentContent{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    max-height: 0px;
+    overflow: hidden;
 }
 
 .resumeImage{
     width: 100%;
     height: auto;
     margin: 0px 0px 5px 0px;
-
     border-radius: 10px;
 }
 
@@ -65,6 +75,21 @@
     font-size: 35px;
     font-weight: 550;
     margin: 0px 0px 10px 0px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.resumeTextTitleButton{
+    padding: none;
+    margin: none;
+    background: none;
+    border: none;
+
+    font-size: 30px;
+    text-align: center;
 }
 
 .resumeText{
