--- a/linksStyle/linksStyle.css
+++ b/linksStyle/linksStyle.css
@@ -7,9 +7,9 @@
     align-items: center;
 
     height: fit-content;
-    width: 20%;
+    width: 30%;
 }
-.link{
+.link, a{
     box-sizing: border-box;
 
     display: flex;
@@ -25,6 +25,6 @@
 
     transition: font-size 0.1s linear;
 }
-.link:hover{
+a:hover{
     font-size: 40px;
 }
