--- a/rightContent/rightContentStyle.css
+++ b/rightContent/rightContentStyle.css
@@ -50,7 +50,7 @@
 
 .imageBoxImage{
     width: 100%;
-    height: 100%;
+    aspect-ratio: 100%;
     border-radius: 10px;
     margin: 0px 0px 5px 0px;
 }
