--- a/leftContent/leftContentStyle.css
+++ b/leftContent/leftContentStyle.css
@@ -3,7 +3,6 @@
     width: 20%;
     margin: 0px 20px 0px 0px;
 }
-
 .resumeContent{
     box-sizing: border-box;
     
@@ -19,21 +18,39 @@
     flex-direction: column;
 }
 
-.resumeContentContent{
+.resumeTextTitle{
+    font-size: 35px;
+    font-weight: 550;
+    margin: 0px 0px 10px 0px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+.resumeTextTitleButton{
+    padding: none;
+    margin: none;
+    background: none;
+    border: none;
+
+    font-size: 30px;
+    text-align: center;
+}
+
+.resumeContentHidden{
     display: flex;
     flex-direction: column;
     height: 100%;
     max-height: 0px;
     overflow: hidden;
 }
-
 .resumeImage{
     width: 100%;
     height: auto;
     margin: 0px 0px 10px 0px;
     border-radius: 10px;
 }
-
 .resumeBasics{
     box-sizing: border-box;
 
@@ -43,7 +60,6 @@
     display: flex;
     flex-direction: column;
 }
-
 .resumeBasicInfo{
     box-sizing: border-box;
 
@@ -58,7 +74,6 @@
 
     font-size: 15px;
 }
-
 .resumeBasicInfoIcon{
     box-sizing: border-box;
 
@@ -69,33 +84,6 @@
 
     font-size: 25px;
     margin: 0px 5px 0px 0px;
-}
-
-.resumeTextTitle{
-    font-size: 35px;
-    font-weight: 550;
-    margin: 0px 0px 10px 0px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: space-between;
-}
-
-.resumeTextTitleButton{
-    padding: none;
-    margin: none;
-    background: none;
-    border: none;
-
-    font-size: 30px;
-    text-align: center;
-}
-
-.resumeText{
-    display: flex;
-    flex-direction: column;
-    font-size: 15px;
 }
 
 .resumeBasicSkill{
@@ -132,5 +120,11 @@
     height: 100%;
     border-radius: 4px;
     background: rgb(0, 200, 150);
+}
+
+.resumeText{
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
 }
 
