--- a/rightContent/rightContentResponseStyle.css
+++ b/rightContent/rightContentResponseStyle.css
@@ -3,15 +3,15 @@
         width: 100%;
     }
 
-    .imagesBox{
+    .projectsBox{
         flex-direction: column;
     }
 
-    .imagesTextTitle{
+    .projectsTextTitle{
         font-size: 30px;
     }
 
-    .imageBox{
+    .projectBox{
         width: 100%;
         font-size: 20px;
     }
