--- a/leftContent/leftContentResponseStyle.css
+++ b/leftContent/leftContentResponseStyle.css
@@ -13,7 +13,8 @@
     }
 
     .resumeBasicInfoIcon{
-        font-size: 30px;
+        width: 30px;
+        height: 30px;
     }
 
     .resumeTextTitle{
