--- a/leftContent/leftContentStyle.css
+++ b/leftContent/leftContentStyle.css
@@ -49,7 +49,7 @@
     width: 100%;
     height: auto;
     margin: 0px 0px 10px 0px;
-    border-radius: 10px;
+    border-radius: 50%;
 }
 .resumeBasics{
     box-sizing: border-box;
@@ -65,24 +65,16 @@
 
     height: fit-content;
     width: 100%;
-    margin: 0px 0px 10px 0px;
+    margin: 0px 0px 15px 0px;
 
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: flex-end;
-
-    font-size: 15px;
+    align-items: center;
 }
 .resumeBasicInfoIcon{
-    box-sizing: border-box;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-
-    font-size: 25px;
+    width: 25px;
+    height: 25px;
     margin: 0px 5px 0px 0px;
 }
 
