--- a/rightContent/rightContentStyle.css
+++ b/rightContent/rightContentStyle.css
@@ -1,15 +1,6 @@
 .rightContent{
     box-sizing: border-box;
-
-    background: rgb(255, 255, 255);
-
-    padding: 20px;
     width: 50%;
-
-    border-radius: 10px;
-    box-shadow: 0px 0px 7px 0px rgb(0, 0, 0);
-
-    margin: 0px 0px 20px 0px;
 }
 
 .projectsContent{
@@ -17,17 +8,40 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    background: rgb(255, 255, 255);
+
+    padding: 20px;
+    width: 100%;
+
+    border-radius: 10px;
+    box-shadow: 0px 0px 7px 0px rgb(0, 0, 0);
+
+    margin: 0px 0px 20px 0px;
 }
 .projectsTextTitle{
     font-size: 35px;
     font-weight: 550;
     margin: 0px 0px 20px 0px;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.projectsTextTitleButton{
+    padding: none;
+    margin: none;
+    background: none;
+    border: none;
+
+    font-size: 30px;
+    text-align: center;
 }
 .projectsBox{
     box-sizing: border-box;
 
     width: 100%;
     height: fit-content;
+    max-height: 0px;
 
     display: flex;
     flex-direction: row;
@@ -35,6 +49,8 @@
     align-items: flex-start;
 
     flex-wrap: wrap;
+
+    overflow: hidden;
 }
 .projectBox{
     box-sizing: border-box;
@@ -81,10 +97,4 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.projectBoxLink{
-    position: absolute;
-    top: 2%;
-    left: 88%;
-    font-size: 100px;
 }
