--- a/generalStyle/generalStyle.css
+++ b/generalStyle/generalStyle.css
@@ -14,8 +14,8 @@
 body{
     box-sizing: border-box;
 
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: var(--defaultPadding);
 
     background: linear-gradient(var(--primaryColor), var(--secundaryColor));
@@ -31,7 +31,6 @@ body{
 body > *{
     font-family: "Roboto", "sans-serif";
 }
-
 .totalContent{
     display: flex;
     flex-direction: row;
