--- a/generalStyle/generalStyle.css
+++ b/generalStyle/generalStyle.css
@@ -14,8 +14,6 @@
 body{
     box-sizing: border-box;
 
-    width: 100vw;
-    height: 100vh;
     padding: var(--defaultPadding);
 
     background: linear-gradient(var(--primaryColor), var(--secundaryColor));
@@ -41,6 +39,7 @@ body > *{
 
 .bottom{
     width: 100%;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
